Boardgame-gitops/base/boardgame/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: boardgame-service
  namespace: production
spec:
  selector:
    app: boardgame  # ← Должно совпадать с deployment selector
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 8080
  type: LoadBalancer
  loadBalancerIP: 192.168.100.101
